--- a/2FSemesterProjekt2024/Pages/Drivers/Create.cshtml
+++ b/2FSemesterProjekt2024/Pages/Drivers/Create.cshtml
@@ -47,8 +47,9 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+                 <input type="submit" value="Create" class="btn btn-primary" />
+@*                   <a input asp-page="/Index" type="submit" value="Create" class="btn btn-primary">Create Profile</a>
+ *@            </div>
         </form>
     </div>
 </div>
