--- a/2FSemesterProjekt2024/Pages/Shared/_Layout.cshtml
+++ b/2FSemesterProjekt2024/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Drivers/Create">Create</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Drivers/GetDriver">View Drivers</a>
                         </li>
                     </ul>
                 </div>
