--- a/2FSemesterProjekt2024/Pages/Drivers/GetDriver.cshtml
+++ b/2FSemesterProjekt2024/Pages/Drivers/GetDriver.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model _2FSemesterProjekt2024.Pages.Drivers.GetDriverModel
 @{
-    ViewData["Title"] = "GetDrivers";
+    ViewData["Title"] = "GetDriver";
 }
     <p>
         <a asp-page="/Drivers/Create">Create New Driver</a>
