--- a/2FSemesterProjekt2024/Pages/Passengers/GetPassengers.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/GetPassengers.cshtml
@@ -1,4 +1,43 @@
 ﻿@page
 @model _2FSemesterProjekt2024.Pages.Passengers.GetPassengersModel
 @{
+    ViewData["Title"] = "GetPassenger";
+}
+<p>
+    <a asp-page="/Passengers/Create">Create New Passenger</a>
+</p>
+<h3 style="color:red"> List of Passengers</h3>
+<table class="table">
+    <thead>
+        <tr>
+            <th> Passenger Id </th>
+            <th> Name </th>
+            <th> Email </th>
+            <th> Phone number </th>
+           
+        </tr>
+    </thead>
+    <tbody>
+
+        @if (Model != null)
+        {
+            @foreach (var item in Model.Passengers)
+            {
+                <tr>
+                    <td>  @item.Passenger Id </td>
+                    <td>  @item.Passenger Name  </td>
+                    <td>  @item.Email  </td>
+                    <td>  @item.PhoneNumber  </td>
+            
+                    @*     <td>
+            <p>
+            <a asp-page="/Students/Student_Enrollments" asp-route-sid="@item.StudentId">Show Enrollments</a>
+            <a asp-page="/Courses/GetCourses" asp-route-sid="@item.StudentId">Enroll student</a> |
+            <a asp-page="/Students/Delete" asp-route-sid="@item.StudentId">Delete student</a>
+            </p>
+            </td> *@
+                </tr>
+            }
+        }
+</table>
 }
