--- a/2FSemesterProjekt2024/Pages/Passengers/GetPassenger.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/GetPassenger.cshtml
@@ -29,13 +29,11 @@
                     <td>  @item.Email  </td>
                     <td>  @item.PhoneNumber  </td>
 
-        @*  <td>
-            <p>
-            <a asp-page="/Students/Student_Enrollments" asp-route-sid="@item.StudentId">Show Enrollments</a>
-            <a asp-page="/Courses/GetCourses" asp-route-sid="@item.StudentId">Enroll student</a> |
-            <a asp-page="/Students/Delete" asp-route-sid="@item.StudentId">Delete student</a>
+         <td>
+            <p>          
+            <a asp-page="/Passengers/Delete" asp-route-sid="@item.PassengerId">Delete passenger</a>
             </p>
-            </td> *@
+            </td> 
                 </tr>
             }
         }
