work in progress

--- a/2FSemesterProjekt2024/Pages/Passengers/Delete.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/Delete.cshtml
@@ -43,6 +43,6 @@
         <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
     <div>
-        <a asp-page="GetPassengers">Back to List</a>
+        <a asp-page="GetPassenger">Back to List</a>
     </div>
 </div>
