--- a/2FSemesterProjekt2024/Pages/Passengers/Update.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/Update.cshtml
@@ -6,7 +6,10 @@
 <h1>UpdatePassenger</h1>
 
 <form method="post">
-
+    <div class="form-group">
+        <input type="hidden" asp-for="@Model.Passenger.PassengerId" />
+          <span asp-validation-for="@Model.Passenger.PassengerId" class="text-danger"></span>
+    </div>
     <div class="form-group">
         <label asp-for="@Model.Passenger.PassengerName" class="control-label"></label>
         <input asp-for="@Model.Passenger.PassengerName" class="form-control" />
@@ -26,3 +29,4 @@
             <input type="submit" value="Save" class="btn btn-primary" />
         </div>
 </form>
+<input type="hidden" asp-for="Passenger.PassengerId" />
