--- a/2FSemesterProjekt2024/Pages/Passengers/GetPassenger.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/GetPassenger.cshtml
@@ -31,8 +31,8 @@
 
          <td>
             <p>          
-            <a asp-page="/Passengers/Delete" asp-route-sid="@item.PassengerId">Delete passenger</a>
-            <a asp-page="/Passengers/Update" asp-route-sid="@item.PassengerId">Edit passenger</a>
+            <a asp-page="/Passengers/Delete" asp-route-pid="@item.PassengerId">Delete passenger</a>
+            <a asp-page="/Passengers/Update" asp-route-pid="@item.PassengerId">Edit passenger</a>
             </p>
             </td> 
                 </tr>
