--- a/2FSemesterProjekt2024/Pages/Drivers/GetDriver.cshtml
+++ b/2FSemesterProjekt2024/Pages/Drivers/GetDriver.cshtml
@@ -33,13 +33,13 @@
                        <td>  @item.Password  </td>
                         <td>  @item.VehicleInfo  </td>
                              <td>  @item.LicenseNumber  </td>
-                @*     <td>
+                     <td>
                        <p>
-                           <a asp-page="/Students/Student_Enrollments" asp-route-sid="@item.StudentId">Show Enrollments</a>
-                            <a asp-page="/Courses/GetCourses" asp-route-sid="@item.StudentId">Enroll student</a> |
-                            <a asp-page="/Students/Delete" asp-route-sid="@item.StudentId">Delete student</a>
+                           <a asp-page="/Drivers/Delete" asp-route-did="@item.DriverId">Delete driver</a>
+                            <a asp-page="/Drivers/Update" asp-route-did="@item.DriverId">Edit driver</a> |
+                           
                        </p>
-                    </td> *@
+                    </td> 
                  </tr>
             }
         }
