--- a/2FSemesterProjekt2024/Pages/Drivers/Update.cshtml
+++ b/2FSemesterProjekt2024/Pages/Drivers/Update.cshtml
@@ -3,9 +3,12 @@
 @{
     ViewData["Title"] = "UpdateDriver";
 }
-<h1>UpdateDriver</h1>
+<h1>Update Driver</h1>
 
 <form method="post">
+    <div class="form-group">
+        <input type="hidden" asp-for="Driver.DriverId" />
+    </div>
 
     <div class="form-group">
         <label asp-for="@Model.Driver.DriverName" class="control-label"></label>
@@ -26,17 +29,22 @@
         <label asp-for="@Model.Driver.Password" class="control-label"></label>
         <input asp-for="@Model.Driver.Password" class="form-control" />
         <span asp-validation-for="@Model.Driver.Password" class="text-danger"></span>
-        <div class="form-group">
+    </div>
+     <div class="form-group">
             <label asp-for="@Model.Driver.VehicleInfo" class="control-label"></label>
             <input asp-for="@Model.Driver.VehicleInfo" class="form-control" />
             <span asp-validation-for="@Model.Driver.VehicleInfo" class="text-danger"></span>
-        </div>
-        <div class="form-group">
+     </div>
+     <div class="form-group">
             <label asp-for="@Model.Driver.LicenseNumber" class="control-label"></label>
             <input asp-for="@Model.Driver.LicenseNumber" class="form-control" />
             <span asp-validation-for="@Model.Driver.LicenseNumber" class="text-danger"></span>
-        </div>
+     </div>
         <div class="form-group">
             <input type="submit" value="Save" class="btn btn-primary" />
         </div>
 </form>
+
+<div>
+    <a asp-page="GetDriver">Back to List</a>
+</div>
