Update button profile

--- a/2FSemesterProjekt2024/Pages/Drivers/Profile.cshtml
+++ b/2FSemesterProjekt2024/Pages/Drivers/Profile.cshtml
@@ -21,4 +21,5 @@
     </div>
 </div>
 
-<a class="btn btn-primary" asp-page="./Edit" asp-route-did="@Model.Driver.DriverId">Edit Profile</a>
+<a class="btn btn-primary" asp-page="./Update" asp-route-did="@Model.Driver.DriverId">Edit Profile</a>
+<a asp-page="/Drivers/Update" asp-route-did="@Model.Driver.DriverId">Edit driver</a>
