--- a/2FSemesterProjekt2024/Pages/Passengers/GetPassenger.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/GetPassenger.cshtml
@@ -33,6 +33,7 @@
             <p>          
             <a asp-page="/Passengers/Delete" asp-route-pid="@item.PassengerId">Delete passenger</a>
             <a asp-page="/Passengers/Update" asp-route-pid="@item.PassengerId">Edit passenger</a>
+            <a asp-page="./Profile" asp-route-pid="@item.PassengerId">View profile</a>
             </p>
             </td> 
                 </tr>
