--- a/2FSemesterProjekt2024/Pages/Passengers/Profile.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/Profile.cshtml
@@ -20,3 +20,4 @@
 </div>
 
 <a class="btn btn-primary" asp-page="./Update" asp-route-pid="@Model.Passenger.PassengerId">Edit Profile</a>
+<a class="btn btn-primary" asp-page="./Delete" asp-route-pid="@Model.Passenger.PassengerId">Delete Profile</a>
