--- a/2FSemesterProjekt2024/Pages/Drivers/Profile.cshtml
+++ b/2FSemesterProjekt2024/Pages/Drivers/Profile.cshtml
@@ -22,3 +22,4 @@
 </div>
 
 <a class="btn btn-primary" asp-page="./Update" asp-route-did="@Model.Driver.DriverId">Edit Profile</a>
+<a class="btn btn-primary" asp-page="./Delete" asp-route-did="@Model.Driver.DriverId">Delete Profile</a>
