--- a/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
@@ -12,39 +12,23 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="@Model.Booking.DriverNa" class="control-label"></label>
-                <input asp-for="@Model.Driver.DriverName" class="form-control" />
-                <span asp-validation-for="@Model.Driver.DriverName" class="text-danger"></span>
+                <label asp-for="@Model.Booking.PickupLocation" class="control-label"></label>
+                <input asp-for="@Model.Booking.PickupLocation" class="form-control" />
+                <span asp-validation-for="@Model.Driver.PickupLocation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="@Model.Driver.Email" class="control-label"></label>
-                <input asp-for="@Model.Driver.Email" class="form-control" />
-                <span asp-validation-for="@Model.Driver.Email" class="text-danger"></span>
+                <label asp-for="@Model.Booking.DropoffLocation" class="control-label"></label>
+                <input asp-for="@Model.Booking.DropoffLocation" class="form-control" />
+                <span asp-validation-for="@Model.Booking.DropoffLocation" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="@Model.Driver.PhoneNumber" class="control-label"></label>
-                <input asp-for="@Model.Driver.PhoneNumber" class="form-control" />
-                <span asp-validation-for="@Model.Driver.PhoneNumber" class="text-danger"></span>
+                <label asp-for="@Model.Booking.BookingTime" class="control-label"></label>
+                <input asp-for="@Model.Booking.BookingTime" class="form-control" />
+                <span asp-validation-for="@Model.Booking.BookingTime" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="@Model.Driver.Password" class="control-label"></label>
-                <input asp-for="@Model.Driver.Password" class="form-control" />
-                <span asp-validation-for="@Model.Driver.Password" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="@Model.Driver.VehicleInfo" class="control-label"></label>
-                <input asp-for="@Model.Driver.VehicleInfo" class="form-control" />
-                <span asp-validation-for="@Model.Driver.VehicleInfo" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="@Model.Driver.LicenseNumber" class="control-label"></label>
-                <input asp-for="@Model.Driver.LicenseNumber" class="form-control" />
-                <span asp-validation-for="@Model.Driver.LicenseNumber" class="text-danger"></span>
-            </div>
+            
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
