--- a/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
@@ -14,7 +14,7 @@
             <div class="form-group">
                 <label asp-for="@Model.Booking.PickupLocation" class="control-label"></label>
                 <input asp-for="@Model.Booking.PickupLocation" class="form-control" />
-                <span asp-validation-for="@Model.Driver.PickupLocation" class="text-danger"></span>
+                <span asp-validation-for="@Model.Booking.PickupLocation" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="@Model.Booking.DropoffLocation" class="control-label"></label>
