--- a/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model _2FSemesterProjekt2024.Pages.Bookings.CreateModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Booking";
 }
 
-<h1>Create</h1>
+<h1>Create Booking</h1>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
