--- a/2FSemesterProjekt2024/Pages/Shared/_Layout.cshtml
+++ b/2FSemesterProjekt2024/Pages/Shared/_Layout.cshtml
@@ -26,11 +26,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-
                             <a class="nav-link text-dark" asp-area="" asp-page="/Drivers/GetDriver">View Drivers</a>
-
+                        </li>
+                        <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/Passengers/GetPassenger">View Passengers</a>
-
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Bookings/GetBooking">View Bookings</a>
                         </li>
                     </ul>
                 </div>
