--- a/2FSemesterProjekt2024/Pages/Bookings/Getbooking.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookings/Getbooking.cshtml
@@ -13,6 +13,7 @@
             <th> PickupLocation </th>
             <th> DropoffLocation </th>
             <th> BookingTime </th>
+            <th> Seats </th>
         </tr>
     </thead>
     <tbody>
@@ -25,6 +26,7 @@
                     <td>  @item.PickupLocation </td>
                     <td>  @item.DropoffLocation  </td>
                     <td>  @item.BookingTime  </td>
+                    <td>  @item.Seats  </td>
 @*                         <p>
 
                             <a asp-page="/Bookings" asp-route-did="@item.BookingId">View profile</a>|
