--- a/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookings/Create.cshtml
@@ -28,6 +28,12 @@
                 <span asp-validation-for="@Model.Booking.BookingTime" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <label asp-for="@Model.Booking.Seats" class="control-label"></label>
+                <input asp-for="@Model.Booking.Seats" class="form-control" />
+                <span asp-validation-for="@Model.Booking.Seats" class="text-danger"></span>
+            </div>
+
             
 
             <div class="form-group">
