--- a/2FSemesterProjekt2024/Pages/Bookings/Update.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookings/Update.cshtml
@@ -27,6 +27,12 @@
         <input asp-for="@Model.Booking.BookingTime" class="form-control" />
         <span asp-validation-for="@Model.Booking.BookingTime" class="text-danger"></span>
     </div>
+
+    <div class="form-group">
+        <label asp-for="@Model.Booking.Seats" class="control-label"></label>
+        <input asp-for="@Model.Booking.Seats" class="form-control" />
+        <span asp-validation-for="@Model.Booking.Seats" class="text-danger"></span>
+    </div>
     <div class="form-group">
         <input type="submit" value="Save" class="btn btn-primary" />
     </div>
