--- a/2FSemesterProjekt2024/Pages/Drivers/Profile.cshtml
+++ b/2FSemesterProjekt2024/Pages/Drivers/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{did:int}"
 @model _2FSemesterProjekt2024.Pages.Drivers.ProfileModel
 @{
     ViewData["Title"] = " Driver profile";
@@ -18,6 +18,7 @@
         <p><strong>License Number:</strong> @Model.Driver.LicenseNumber</p>
         <p><strong>Points:</strong> @Model.Driver.Points</p>
         <p><strong>Rating:</strong> @Model.Driver.Rating</p>
+
     </div>
 </div>
 
