--- a/2FSemesterProjekt2024/Pages/Passengers/Profile.cshtml
+++ b/2FSemesterProjekt2024/Pages/Passengers/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{pid:int}"
 @model _2FSemesterProjekt2024.Pages.Passengers.ProfileModel
 @{
     ViewData["Title"] = " Passenger profile";
@@ -15,7 +15,7 @@
         <p><strong>Email:</strong> @Model.Passenger.Email</p>
         <p><strong>Phone Number:</strong> @Model.Passenger.PhoneNumber</p>
         <p><strong>Vehicle Info:</strong> @Model.Passenger.Password</p>
-               
+
     </div>
 </div>
 
