--- a/2FSemesterProjekt2024/Pages/Profile/Profile.cshtml
+++ b/2FSemesterProjekt2024/Pages/Profile/Profile.cshtml
@@ -42,5 +42,5 @@ else
     <p>Unable to load profile information. Please <a href="/Auth/Login">log in</a> again.</p>
 }
 
-<a href="/Auth/Logout">Logout</a>
+<a href="/Logout/Logout">Logout</a>
 
