--- a/2FSemesterProjekt2024/Pages/Bookings/Delete.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookings/Delete.cshtml
@@ -16,16 +16,16 @@
                 @Html.DisplayFor(model => model.Booking.BookingId)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Booking.DriverId)
+                @Html.DisplayNameFor(model => model.Booking.Driver.DriverName) @* if these lines dont wrok, delete them *@
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Booking.DriverId)
+                @Html.DisplayFor(model => model.Booking.Driver.DriverName) @* if these lines dont wrok, delete them *@
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Booking.PassengerId)
+                @Html.DisplayNameFor(model => model.Booking.Passenger.PassengerName) @* if these lines dont wrok, delete them *@
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Booking.PassengerId)
+                @Html.DisplayFor(model => model.Booking.Passenger.PassengerName) @* if these lines dont wrok, delete them *@
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Booking.PickupLocation)
@@ -51,12 +51,7 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.Booking.Seats)
             </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Booking.Driver.DriverName) @* if these lines dont wrok, delete them *@
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Booking.Driver.DriverName) @* if these lines dont wrok, delete them *@
-            </dd>
+            
 
         </dl>
         <input type="submit" value="Delete" class="btn btn-danger" />
