--- a/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
+++ b/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,7 +27,20 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div>
+                <h4>Select Roles:</h4>
+                @foreach (var role in Model.AvailableRoles)
+                {
+                    <div>
+                        <input type="checkbox" name="Input.SelectedRoles" value="@role" id="role-@role" />
+                        <label for="role-@role">@role</label>
+                    </div>
+                }
+            </div>
+
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
