--- a/2FSemesterProjekt2024/Pages/Shared/_LoginPartial.cshtml
+++ b/2FSemesterProjekt2024/Pages/Shared/_LoginPartial.cshtml
@@ -15,16 +15,21 @@
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
         </form>
     </li>
-        <li class="nav-item">
+        /*<li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-page="/Drivers/GetDriver">View Drivers</a>
         </li>
         <li>
             <a class="nav-link text-dark" asp-area="" asp-page="/Passengers/GetPassenger">View Passengers</a>
 
         </li>
+        */
         <li>
             <a class="nav-link text-dark" asp-area="" asp-page="/Bookings/Getbooking">Bookings</a>
         </li>
+        <li>
+            <a class="nav-link text-dark" asp-area="" asp-page="/Profile/Profile">View profile</a>
+        </li>
+           
 }
 else
 {
