--- a/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
+++ b/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
@@ -39,7 +39,7 @@
                 }
             </div>
 
-            
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
 
         </form>
@@ -53,8 +53,10 @@
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                article
+                                about setting up this ASP.NET application to support logging in via external services
+                            </a>.
                         </p>
                     </div>
                 }
