--- a/2FSemesterProjekt2024/Pages/Bookning/Index.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookning/Index.cshtml
@@ -6,12 +6,11 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Your bookings</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-<h1>@Model.UserId</h1>
 <table class="table">
     <thead>
         <tr>
@@ -29,15 +28,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Booking[0].CreatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Booking[0].UpdatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Booking[0].Driver)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Booking[0].Passenger)
             </th>
             <th></th>
         </tr>
@@ -60,15 +50,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedAt)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
+            @* <td>
+                @Html.DisplayFor(modelItem => item.Driver.FirstName) @Html.DisplayFor(modelItem => item.Driver.LastName)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Driver.FirstName) @Html.DisplayFor(modelItem => item.Driver.LastName)
-            </td>
-            <td>
-                    @Html.DisplayFor(modelItem => item.Passenger.FirstName) @Html.DisplayFor(modelItem => item.Passenger.LastName)
-            </td>
+                @Html.DisplayFor(modelItem => item.Passenger.FirstName) @Html.DisplayFor(modelItem => item.Passenger.LastName)
+            </td> *@
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.BookingId">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.BookingId">Details</a> |
