--- a/2FSemesterProjekt2024/Pages/Bookning/AvailableBookings.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookning/AvailableBookings.cshtml
@@ -1,12 +1,15 @@
 ﻿@page
-@model _2FSemesterProjekt2024.Pages.Bookning.IndexModel
+@model _2FSemesterProjekt2024.Pages.Bookning.AvailableBookingsModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "AvailableBookings";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Your bookings</h1>
+<h1>AvailableBookings</h1>
+
+@* <h1>@Model.UserType</h1>
+ *@
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -14,6 +17,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Booking[0].PassengerDriverId)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Booking[0].PickupLocation)
             </th>
@@ -29,12 +35,24 @@
             <th>
                 @Html.DisplayNameFor(model => model.Booking[0].CreatedAt)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Booking[0].UpdatedAt)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Booking[0].Driver)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Booking[0].Passenger)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model.Booking) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.PassengerDriverId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PickupLocation)
             </td>
@@ -50,12 +68,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedAt)
             </td>
-            @* <td>
-                @Html.DisplayFor(modelItem => item.Driver.FirstName) @Html.DisplayFor(modelItem => item.Driver.LastName)
+            <td>
+                @Html.DisplayFor(modelItem => item.UpdatedAt)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Passenger.FirstName) @Html.DisplayFor(modelItem => item.Passenger.LastName)
-            </td> *@
+                @Html.DisplayFor(modelItem => item.Driver.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Passenger.Id)
+            </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.BookingId">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.BookingId">Details</a> |
@@ -65,7 +86,3 @@
 }
     </tbody>
 </table>
-
-<p>
-    <a asp-page="AvailableBookings">Available bookings</a>
-</p>
