--- a/2FSemesterProjekt2024/Pages/Shared/_Layout.cshtml
+++ b/2FSemesterProjekt2024/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - WebApplication2 - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2024 - ZealandGo - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
