--- a/2FSemesterProjekt2024/Pages/Bookning/Index.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookning/Index.cshtml
@@ -56,11 +56,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Passenger.FirstName) @Html.DisplayFor(modelItem => item.Passenger.LastName)
             </td> *@
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.BookingId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.BookingId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.BookingId">Delete</a>
-            </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.BookingId">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.BookingId">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.BookingId">Delete</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=@item.PickupLocation" target="_blank">
+                        <img src="https://maps.googleapis.com/maps/api/staticmap?center=@item.PickupLocation&zoom=14&size=150x150&maptype=roadmap
+                    &markers=color:red%7Clabel:P%7C@item.PickupLocation&key=AIzaSyA7EgN8WzFZAL9GKNoPO6J3m1cX0E-j738"
+                             alt="Map" style="width: 200px; height: 100px;" />
+
+                </td>
         </tr>
 }
     </tbody>
