--- a/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
+++ b/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
@@ -16,15 +16,15 @@
                     <div class="form-floating mb-3">
     <h4>Select Roles:</h4>
     <div>
-        <input type="radio" id="role-Driver" name="Input.SelectedRoles" value="Driver" />
+        <input type="radio" id="role-Driver" name="Input.SelectedRoles" value="Driver" required/>
         <label for="role-Driver">Driver</label>
     </div>
     <div>
-        <input type="radio" id="role-Passenger" name="Input.SelectedRoles" value="Passenger" />
+        <input type="radio" id="role-Passenger" name="Input.SelectedRoles" value="Passenger" required/>
         <label for="role-Passenger">Passenger</label>
     </div>
     <div>
-        <input type="radio" id="role-PassengerDriver" name="Input.SelectedRoles" value="PassengerDriver" />
+                    <input type="radio" id="role-PassengerDriver" name="Input.SelectedRoles" value="PassengerDriver" required />
         <label for="role-PassengerDriver">PassengerDriver</label>
     </div>
 </div>
