--- a/2FSemesterProjekt2024/wwwroot/css/site.css
+++ b/2FSemesterProjekt2024/wwwroot/css/site.css
@@ -21,3 +21,36 @@ body {
   margin-bottom: 60px;
 }
 
+:root {
+    --primary-green: #d4f4dd;
+    --secondary-green: #a8e6a3;
+}
+
+body {
+    background-color: var(--primary-green);
+    color: #333;
+}
+
+.navbar {
+    background-color: var(--secondary-green);
+}
+
+.navbar-brand, .nav-link {
+    color: #fff !important;
+}
+
+.btn-green {
+    background-color: var(--secondary-green);
+    color: #fff;
+    border: none;
+}
+
+    .btn-green:hover {
+        background-color: #91d68f;
+    }
+
+.card {
+    border: none;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
