--- a/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -17,7 +17,7 @@
             <button class="btn btn-eco-edit" type="submit">Download</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-eco-delete">Delete</a>
         </p>
     </div>
 </div>
