--- a/2FSemesterProjekt2024/Pages/Index.cshtml
+++ b/2FSemesterProjekt2024/Pages/Index.cshtml
@@ -36,7 +36,7 @@
         </div>
     </div>
 </section>
-footer: <footer class="text-center py-4" style="background-color: var(--secondary-green); color: #000;">
+<footer class="text-center py-4" style="background-color: var(--secondary-green); color: #000;">
     <p>© 2024 ZealandGo. All rights reserved.</p>
 </footer>
 
