--- a/2FSemesterProjekt2024/Pages/Bookning/Details.cshtml
+++ b/2FSemesterProjekt2024/Pages/Bookning/Details.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1 class =" eco-header">Details</h1>
 
 <div>
     <h4>Booking</h4>
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Booking.BookingId">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Booking.BookingId" class="btn btn-eco-edit">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
