--- a/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
+++ b/2FSemesterProjekt2024/Areas/Identity/Pages/Account/Register.cshtml
@@ -89,7 +89,7 @@
             </div> *@
             
 
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-green btn-lg">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-eco-edit btn-lg p-2">Register</button>
 
         </form>
     </div>
