--- a/2FSemesterProjekt2024/Pages/Index.cshtml
+++ b/2FSemesterProjekt2024/Pages/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="container">
         <h1 class="display-4">Welcome to ZealandGo</h1>
         <p class="display-6 mt-4">Sign up now to join the ZealandGo community and be a part of creating a more sustainable future for our school!</p>
-        <a class="btn btn-green btn-lg" id="register" asp-area="Identity" asp-page="/Account/Register">Get Started</a>
+        <a class="btn btn-eco-edit btn-lg" id="register" asp-area="Identity" asp-page="/Account/Register">Get Started</a>
     </div>
 </section>
 <section class="py-5">
@@ -36,7 +36,7 @@
         </div>
     </div>
 </section>
-<footer class="text-center py-4" style="background-color: var(--secondary-green); color: #000;">
+<footer class="text-center py-4">
     <p>© 2024 ZealandGo. All rights reserved.</p>
 </footer>
 
