--- a/2FSemesterProjekt2024/wwwroot/css/site.css
+++ b/2FSemesterProjekt2024/wwwroot/css/site.css
@@ -21,23 +21,22 @@ body {
   margin-bottom: 60px;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
+footer {
+    margin-top: auto;
 }
 
+:root {
+    --primary-green:  #d4f4dd;
+    --secondary-green: #a8e6a3;
+}
 
+.navbar{
+    background-color: var(--secondary-green);
+}
 
-
-
-
-
-
-
-
-
+.navbar-brand, nav-link{
+    color: #000 !important;
+}
 
 .btn-green {
     background-color: var(--secondary-green);
